--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <main>
         <section>
-            <input type="text" name="ano" id="iano" placeholder="Digite o ano de disputa">
+            <input type="text" placeholder="Digite o ano de disputa" id="campo-pesquisa">
             <button onclick="pesquisar()">Pesquisar</button>
         </section>
 
